<resources>
    <string name="app_name">Duckest</string>
    <string name="button_sign_up"><u>Еще нет аккаунта? <b>Зарегистрируйтесь.</b> </u></string>
    <string name="button_forgot_password"><u>Забыли пароль?</u></string>
    <string name="sign_up_hint_surname">Фамилия</string>
    <string name="sign_up_hint_name">Имя</string>
    <string name="sign_up_hint_patronymic">Отчество</string>
    <string name="sign_up_hint_email">E-mail</string>
    <string name="sign_up_hint_password">Пароль</string>
    <string name="sign_up_hint_confirm_password">Подтвердите пароль</string>
    <string name="sign_up_hint_save">Сохранить</string>
    <string name="sign_in_enter">Войти</string>
    <string name="sign_up_error_title_user_exist">Для данной почты уже существует аккаунт</string>
    <string name="sign_up_error_title_password">Пароль должен содержать более 6 знаков</string>
    <string name="sign_up_error_title_something_went_wrong">Что-то пошло не так, попробуйте позже</string>
    <string name="sign_up_error_title_wrong_email">Введите правильную почту</string>
    <string name="sign_up_error_passwords_dont_match">Не совпадают пароли</string>
    <string name="sign_up_error_title_empty">Это поле обязательно для заполнения</string>
    <string name="feedback_company_email">duckestcompany@gmail.com</string>
    <string name="feedback_error_title_no_mail_app">Нет почтового клиента</string>
    <string name="feed_test_title_javascript">JavaScript</string>
    <string name="feed_test_title_python">Python</string>
    <string name="level_title_junior">Junior</string>
    <string name="level_title_middle">Middle</string>
    <string name="level_title_senior">Senior</string>
    <string name="test_preview_check_box_content_description">Чек бокс</string>
    <string name="test_preview_test_image_content_description">Изображение темы теста</string>
    <string name="menu_title_test">Тесты</string>
    <string name="menu_title_feedback">Обратная связь</string>
    <string name="menu_title_settings">Настройки</string>
    <string name="menu_title_exit">Выход</string>
    <string name="header_content_description_app_icon">App icon</string>
    <string name="header_content_description_profile_icon">Profile icon</string>
    <string name="intro_title_app_name">DUCKEST</string>
    <string name="sign_up_wrong_name">Это поле может содержать только буквы русского алфавита</string>
    <string name="feedback_not_enough_symbols">Недостаточное количество символов</string>
    <string name="check_email_try_another_email"><u>Не получили письмо? Проверьте папку со спамом или попробуйте другой email-адрес</u></string>
    <string name="check_email_send_instruction">Мы отправили инструкцию по восстановлению пароля на ваш email-адрес</string>
    <string name="check_email_label">Проверьте вашу почту</string>
    <string name="email_icon">email icon</string>
    <string name="reset_password_label">Восстановление пароля</string>
    <string name="reset_password_enter_email_label">Введите почту, на которую мы вышлем ссылку для смены пароля</string>
    <string name="reset_password_remember_password"><u>Вспомнили пароль? Авторизуйтесь</u></string>
    <string name="reset_password_btn_label">Восстановить пароль</string>
    <string name="start_test_description">Все вопросы имеют только один правильный ответ. По окончании тестирования Вам будет показан результат тестирования в процентах. При условии прохождения теста на 80% и более Вы можете получить сертификат, а также возможность увидеть ответы на вопросы, где была допущена ошибка. Выходить во время теста нельзя, иначе прохождение теста будет сброшено.</string>
    <string name="start_test_btn">Начать тестирование</string>
    <string name="test_result_wrong_answers">Неправильные ответы: %1$d</string>
    <string name="test_result_right_answers">%1$d из %2$d \n результат</string>
    <string name="test_result">Тест пройден на %1$d%%</string>
    <string name="test_result_btn_try_again">Попробовать еще раз</string>
    <string name="test_result_dont_upset">Не расстраивайтесь!</string>
    <string name="result_test_fail_label">Тест не сдан</string>
    <string name="test_btn_answer">Ответить</string>
    <string name="test_passed_title">Тест сдан</string>
    <string name="test_passed_congratulation">Поздравляем!</string>
    <string name="cd_certificate">certificate</string>
    <string name="settings_change_profile">Редактирование профиля</string>
    <string name="settings_descriptions">Ваше официальное имя используемой в сертификатах</string>
    <string name="settings_change_password">Изменение пароля</string>
    <string name="settings_new_password">Новый пароль</string>
    <string name="settings_hint_old_password">Текущий пароль</string>
    <string name="settings_wrong_password">Вы ввели неверный пароль</string>
    <string name="settings_data_saved">Данные сохранены</string>
    <string name="intro_test_title">%1$s</string>
    <string name="menu_add_test">add test</string>
    <string name="feedback_topic_hint">Тема обращения</string>
    <string name="feedback_message_hint">Сообщение</string>
    <string name="feedback_send_button">отправить</string>
    <string name="level_title">Выберите уровень сложности:</string>
    <string name="test_passed_title_certificate">сертификат</string>
    <string name="share">Share</string>
    <string name="certificate_passed_name">certificate.jpg</string>
    <string name="certificate_saved_information">Сертификат сохранен в галерее</string>
    <string name="back">back</string>
    <string name="exit">Выход</string>
    <string name="exit_message">Вы хотите прервать прохождение теста? Данные не будут сохранены</string>
    <string name="test_title">Вопрос: %1$s / %2$s</string>
    <string name="head_name_title">%1$s  %2$s</string>
    <string name="dialog_title_confirm_email">Подтверждение почты</string>
    <string name="dialog_description_confirm_email">На ваш адрес отправлено письмо с уникальной ссылкой для подтверждения почты</string>
    <string name="dialog_ok">ОК</string>
    <string name="error_user_message">Что-то пошло не так, попробуйте сохранить данные позже</string>
    <string name="test_message_no_answer">Выберите вариант ответа</string>
</resources>