<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/testFragment"
            android:icon="@drawable/ic_assignment"
            android:title="@string/menu_title_test" />
        <item
            android:id="@+id/progressFragment"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menu_title_progress" />
        <item
            android:id="@+id/feedbackFragment"
            android:icon="@drawable/ic_send"
            android:title="@string/menu_title_feedback" />
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_title_settings" />
        <item
            android:id="@+id/exitFragment"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_title_exit" />
    </group>
</menu>