<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_test_fail_label"
            android:textColor="@color/red"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/test_result_dont_upset"
            android:textColor="@color/typo"
            android:textSize="17sp" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/test_result_right_answers"
            android:textColor="@color/typo"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:text="@string/test_result_wrong_answers"
            android:textSize="26sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="40dp"
            android:background="@color/typo_ghost"
             />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset_password"
            android:layout_width="match_parent"
            android:layout_marginVertical="20dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/test_result_btn_try_again"
            app:backgroundTint="#3e4245"
            tools:layout_editor_absoluteX="30dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@color/typo_ghost"
            />

    </LinearLayout>
</layout>