<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/test_preview_test_image_content_description"
            android:cropToPadding="true"
            android:padding="0dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                android:id="@+id/level_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="@string/intro_test_title"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:text="@string/start_test_description"
                android:textSize="22sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/start_test"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="16dp"
                android:text="@string/start_test_btn"
                app:backgroundTint="#3e4245" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>